<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:id="@+id/content"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="200dp"
    android:layout_height="200dp"
    android:background="@drawable/border">

    <LinearLayout
        android:id="@+id/titlebar"
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:layout_alignParentTop="true"
        android:background="#000000"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="4dp">

        <ImageView
            android:id="@+id/window_icon"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:contentDescription="@string/standout_window_icon" />

        <TextView
            android:id="@+id/title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="4dp"
            android:layout_weight="1"
            android:maxLines="1"
            android:text="Title"
            android:textSize="20sp"
            android:visibility="gone"
            tools:ignore="HardcodedText" />

        <TextView
            android:id="@+id/hide"
            android:layout_width="0dp"
            android:layout_height="32dp"
            android:layout_weight="1"
            android:background="@drawable/standout_button"
            android:layout_marginRight="2dp"
            android:ellipsize="end"
            android:gravity="center"
            android:singleLine="true"
            android:text="@string/standout_hide" />

        <TextView
            android:id="@+id/maximize"
            android:layout_width="0dp"
            android:layout_height="32dp"
            android:layout_weight="1"
            android:ellipsize="end"
            android:background="@drawable/standout_button"
            android:layout_marginRight="2dp"
            android:gravity="center"
            android:singleLine="true"
            android:text="@string/standout_maximize" />

        <TextView
            android:id="@+id/close"
            android:layout_width="0dp"
            android:layout_height="32dp"
            android:layout_weight="1"
            android:ellipsize="end"
            android:background="@drawable/standout_button"
            android:gravity="center"
            android:singleLine="true"
            android:text="@string/standout_close" />
    </LinearLayout>

    <FrameLayout
        android:id="@+id/body"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@+id/titlebar"></FrameLayout>

    <ImageView
        android:id="@+id/corner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:contentDescription="@string/standout_corner"
        android:src="@drawable/corner" />

</RelativeLayout>
